Adding footer, adding CodeSignal problem

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             The contents below are my solutions to some of
         </p>
         <p>
-            the codility problems which I solved to improve
+            the Codility and Code Signal problems which I solved to improve
         </p>
         <p>
             my programming skills while seeking for employment.
@@ -576,9 +576,36 @@
                 </div>
             </div>
 
+            <div id="FirstDuplicate-solution" class="grid-item container-bg-color">
+                <div class="content">
+                    <img src="./images/code_image3.jpg" alt="code image" width="200" height="150">
+                    <div class="text-container">
+                        <h4>First Duplicate Code</h4>
+                        <p>
+                            Click the button below to view my<br>
+                            solution to this Code Signal<br>
+                            problem in C++ and in Python.
+                        </p>
+                    </div>
+                    <div class="button-container">
+                        <button onclick="showFirstDuplicateCode()">FirstDuplicate</button>
+                    </div>
+                </div>
+            </div>
+
         </div>
 
     </div>
+
+    <div id="back-on-Top" class="goUp-link">
+        <div class="back-on-top-button">
+            <a href="./index.html">GO UP</a>
+        </div>
+    </div>
+
+    <footer>
+        <p>&copy; Imani Kadiva</p>
+    </footer>
 
     <script src="./script.js"></script>
 </body>
